feat(teams): Add team updating
